--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@
 
 html body {
     overflow: hidden;
+    background-color: black;
 }
 
 #main {
     width: 100%;
     height: 100vh;
-    background-color: black;
+    
 }
 
 #upper-sec {
@@ -30,7 +31,12 @@ html body {
     border-radius: 5px;
     background-color: white;
     color: black;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    padding: 20px 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 #upper-sec h1 {
@@ -42,6 +48,7 @@ html body {
 
 #upper-sec p {
     color: white;
+    font-size: 1.7rem;
 }
 
 
@@ -105,4 +112,5 @@ html body {
     position: absolute;
     margin-left: 550px;
     margin-top: 245px;
+    padding: 10px 70px;
 }
